[metadata]
name = TelegramRestrictionBypass
version = 2.0.0
author = Paidguy
description = Production-grade Telegram content downloader with multi-bot worker pools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Paidguy/TelegramRestrictionBypass
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Communications :: Chat

[options]
python_requires = >=3.11
packages = find:
install_requires =
    Pyrofork
    TgCrypto
    Pyleaves
    python-dotenv
    psutil
    pillow

[flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,downloads,docs
ignore = E203,W503,E501
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=. --cov-report=html

[coverage:run]
omit =
    */tests/*
    */venv/*
    */downloads/*
    setup.py
